Bug 225083 - KNotes crashes when selecitng "Show All Notes" after closing a note using Alt+F4 [QWidget::hide, KNotesApp::showAllNotes]
Summary: KNotes crashes when selecitng "Show All Notes" after closing a note using Alt...
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-01 02:08 UTC by Alexandre Pereira
Modified: 2010-02-01 22:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre Pereira 2010-02-01 02:08:52 UTC
Version:            (using Devel)
Installed from:    Compiled sources

hi

i am using knotes, and i close a note window by keyboard shortcut "alt+f4".

afterwards , when i try to "show all notes" , knotes crashes.

if i , instead of "alt+f4" , close a note by "esc" key or clicking in the "X button", or in the menu "hide", all is well , and upon triggering "show all notes" , they all show properly.

knotes doesnt crash when i close a note with "alt+f4" , only when try to "show all notes" afterwards.

thanks , hope the bug report is understandable
Comment 1 Dario Andres 2010-02-01 22:47:16 UTC
I could reproduce the bug here using:

Qt: 4.6.1 (kde-qt master commit 5ccbae0c2d9254efe67599137afec763d4fec0f6
        Date:   Tue Jan 19 20:42:24 2010 +0100)
KDE Development Platform: 4.4.61 (KDE 4.4.61 (KDE 4.5 >= 20100127))
kdelibs svn rev. 1082077 / kdebase svn rev. 1082077
kdepim svn rev. 1083266

on ArchLinux i686 - Kernel 2.6.32.3

Backtrace:
--

Application: KNotes (knotes), signal: Segmentation fault
[Current thread is 1 (Thread 0xb3678700 (LWP 8192))]

Thread 2 (Thread 0xb1a8eb70 (LWP 8193)):
#0  0xb7898424 in __kernel_vsyscall ()
#1  0xb52cdf41 in select () from /lib/libc.so.6
#2  0xb560a2f4 in QProcessManager::run (this=0xb579666c) at io/qprocess_unix.cpp:245
#3  0xb551bcbc in QThreadPrivate::start (arg=0xb579666c) at thread/qthread_unix.cpp:248
#4  0xb548b8ac in start_thread () from /lib/libpthread.so.0
#5  0xb52d501e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb3678700 (LWP 8192)):
[KCrash Handler]
#6  0x406df000 in ?? ()
#7  0x0806393a in QWidget::hide (this=0x9697408) at /home/kde-devel/kde/src/qt/include/QtGui/../../src/gui/kernel/qwidget.h:489
#8  0x08060fdd in KNotesApp::showAllNotes (this=0x940bab8) at /home/kde-devel/kde/src/KDE/kdepim/knotes/knotesapp.cpp:305
#9  0x08063270 in KNotesApp::qt_metacall (this=0x940bab8, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbf9457c8) at /home/kde-devel/kde/build/KDE/kdepim/knotes/knotesapp.moc:127
#10 0xb5639b9c in QMetaObject::metacall (object=0x940bab8, cl=QMetaObject::InvokeMetaMethod, idx=33, argv=0xbf9457c8) at kernel/qmetaobject.cpp:237
#11 0xb564dc0e in QMetaObject::activate (sender=0x941ecf0, m=0xb63e9af8, local_signal_index=1, argv=0xbf9457c8) at kernel/qobject.cpp:3275
#12 0xb590ca4a in QAction::triggered (this=0x941ecf0, _t1=false) at .moc/debug-shared/moc_qaction.cpp:263
#13 0xb590bf21 in QAction::activate (this=0x941ecf0, event=QAction::Trigger) at kernel/qaction.cpp:1251
#14 0xb5e59daa in QMenuPrivate::activateCausedStack (this=0x93ec1a0, causedStack=..., action=0x941ecf0, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1011
#15 0xb5e5a207 in QMenuPrivate::activateAction (this=0x93ec1a0, action=0x941ecf0, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1103
#16 0xb5e5e707 in QMenu::mouseReleaseEvent (this=0x93ec180, e=0xbf94625c) at widgets/qmenu.cpp:2313
#17 0xb6a2f840 in KMenu::mouseReleaseEvent (this=0x93ec180, e=0xbf94625c) at /home/kde-devel/kde/src/KDE/kdelibs/kdeui/widgets/kmenu.cpp:471
#18 0xb59881c2 in QWidget::event (this=0x93ec180, event=0xbf94625c) at kernel/qwidget.cpp:7978
#19 0xb5e5edb5 in QMenu::event (this=0x93ec180, e=0xbf94625c) at widgets/qmenu.cpp:2415
#20 0xb591cb26 in QApplicationPrivate::notify_helper (this=0x930ed40, receiver=0x93ec180, e=0xbf94625c) at kernel/qapplication.cpp:4298
#21 0xb591aba5 in QApplication::notify (this=0xbf946aec, receiver=0x93ec180, e=0xbf94625c) at kernel/qapplication.cpp:3863
#22 0xb6936c68 in KApplication::notify (this=0xbf946aec, receiver=0x93ec180, event=0xbf94625c) at /home/kde-devel/kde/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:302
#23 0xb56325ed in QCoreApplication::notifyInternal (this=0xbf946aec, receiver=0x93ec180, event=0xbf94625c) at kernel/qcoreapplication.cpp:704
#24 0xb591f2e9 in QCoreApplication::sendSpontaneousEvent (receiver=0x93ec180, event=0xbf94625c) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#25 0xb59191bf in QApplicationPrivate::sendMouseEvent (receiver=0x93ec180, event=0xbf94625c, alienWidget=0x0, nativeWidget=0x93ec180, buttonDown=0xb640c958, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:2961
#26 0xb59be52a in QETWidget::translateMouseEvent (this=0x93ec180, event=0xbf946780) at kernel/qapplication_x11.cpp:4368
#27 0xb59bb16a in QApplication::x11ProcessEvent (this=0xbf946aec, event=0xbf946780) at kernel/qapplication_x11.cpp:3379
#28 0xb59f1769 in x11EventSourceDispatch (s=0x9311d40, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#29 0xb3f14378 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#30 0xb3f17bf0 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#31 0xb3f17d23 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#32 0xb5669f74 in QEventDispatcherGlib::processEvents (this=0x92cecf0, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#33 0xb59f1d9e in QGuiEventDispatcherGlib::processEvents (this=0x92cecf0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#34 0xb562f9c7 in QEventLoop::processEvents (this=0xbf946a5c, flags=...) at kernel/qeventloop.cpp:149
#35 0xb562fb0c in QEventLoop::exec (this=0xbf946a5c, flags=...) at kernel/qeventloop.cpp:201
#36 0xb5632cc9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#37 0xb5919e76 in QApplication::exec () at kernel/qapplication.cpp:3577
#38 0x0805cfa4 in main (argc=1, argv=0xbf946c14) at /home/kde-devel/kde/src/KDE/kdepim/knotes/main.cpp:69
Comment 2 Dario Andres 2010-02-01 22:58:23 UTC
SVN commit 1083775 by darioandres:

- The note widget should not be closed by Alt+F4 as that will delete it (causing crashes), we just want to hide it.
  - Let's ignore the close event

BUG: 225083


 M  +2 -1      knote.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1083775
Comment 3 Dario Andres 2010-02-01 22:59:43 UTC
SVN commit 1083776 by darioandres:

Backport to 4.4 of:
SVN commit 1083775 by darioandres:

- The note widget should not be closed by Alt+F4 as that will delete it
(causing crashes), we just want to hide it.
  - Let's ignore the close event

CCBUG: 225083


 M  +2 -1      knote.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1083776