- The note widget should not be closed by Alt+F4 as that will delete it (causing crashes), we just want to hide it.   - Let's ignore the close event

BUG: 225083

svn path=/trunk/KDE/kdepim/knotes/; revision=1083775